# winding_number

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: poly_io.hpp  winding.hpp
src/: main.cpp  poly_io.cpp  winding.cpp
supplemental/: poly_io_notes.txt
test/: crlf_polygons.txt  poly_io_test.cpp  polygons.txt  testmain.cpp  winding_test.cpp
